# nes-emulator

./: .clang-format  CMakeLists.txt  Makefile  README.md  main.c  system.c  system.h
include/: system.h
src/: CMakeLists.txt  main.c  system.c
